# ContentChecker

./: .coveragerc  .gitignore  AUTHORS.rst  CONTRIBUTING.rst  Dockerfile  LICENSE.txt  Procfile  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py
docs/: conf.py  index.rst
src/contentchecker/: __init__.py  main.py  skeleton.py  streamlit_app.py
tests/: conftest.py  test_skeleton.py
